--- a/Code-Editor/code-editor/package.json
+++ b/Code-Editor/code-editor/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^5.16.7",
-    "axios": "^1.7.3",
+    "axios": "^1.7.5",
     "framer-motion": "^11.3.24",
     "gsap": "^3.12.5",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.50.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
