--- a/Code-Editor/code-editor/package.json
+++ b/Code-Editor/code-editor/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.5",
     "framer-motion": "^11.3.24",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.50.0",
     "prop-types": "^15.8.1",
